# frightful_hobgoblin

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  bash.exe.stackdump  build.rs  example-config.toml  names.rs  notes  perf  stacks.folded
.cargo/: config.toml
anvil-region/: .travis.yml  Cargo.toml  LICENSE  README.md
anvil-region/src/: error.rs  lib.rs  position.rs  provider.rs  region.rs
prefabs/: crane.nbt  crane_rot_a.nbt  crane_rot_b.nbt  crane_rot_c.nbt  fountain_1.nbt  fountain_2.nbt  hearth.nbt  hearth_1.nbt  hearth_2.nbt  monument_1.nbt  monument_2.nbt  stall_0.nbt  stall_1.nbt  stall_2.nbt  stall_3.nbt  stall_wares_0.nbt  stall_wares_1.nbt  stall_wares_2.nbt  stall_wares_3.nbt  stall_wares_4.nbt  stall_wares_5.nbt  stall_wares_6.nbt  well_1.nbt  well_2.nbt  well_4.nbt  well_5.nbt
prefabs/dzong/: roof_corner_edge.nbt  roof_layered_corner_edge.nbt  roof_top_pillar.nbt  roof_top_support.nbt  roof_topmost_end.nbt  roof_turret.nbt
prefabs/test-house/: 0.nbt  1.nbt  2.nbt
resources/: pack.mcmeta
resources/assets/minecraft/: sounds.json
resources/assets/minecraft/sounds/: LICENSE
src/: behavior.rs  build_recorder.rs  debug_image.rs  detect_existing_buildings.rs  geometry.rs  geometry_types.rs  goods.rs  house.rs  house2.rs  lang.rs  lib.rs  loot.rs  main.rs  make_divider.rs  make_house.rs  make_misc.rs  make_name.rs  make_trees.rs  market.rs  material.rs  names.rs  noise.rs  optimize.rs  pathfind.rs  prefab.rs  querry.rs  rand.rs  remove_foliage.rs  replay.rs  roof.rs  shipping.rs  sim.rs  sim_anneal.rs  stall.rs  terraform.rs  test_house.rs  trees.rs
src/level/: biome.rs  block.rs  block_map.rs  column_map.rs  entity.rs  index_call.rs  mod.rs  view.rs
src/sim/: building_plan.rs  construction.rs  desire_lines.rs  infinite_sim.rs  logistics.rs  lumberjack.rs  main_loop.rs  personal_name.rs  quarry.rs  roads.rs  sim.rs  sim_schedule.rs  social.rs  steady_state.rs  storage_pile.rs  villager.rs
src/structures/: castle.rs  dzong.rs  farm.rs  mod.rs
src/world/: biome.rs  block.rs  entity.rs  export_behavior.rs  mod.rs  vanilla_village.rs
templates/: castle_privy.nbt  quarry_hut.nbt
templates/castle/: privy.nbt
templates/dzong/: roof.nbt  roof_corner.nbt  roof_edge.nbt  roof_layered_edge.nbt  roof_top_beam.nbt  roof_top_end.nbt  roof_top_middle.nbt  window_protuding.nbt
