[package]
name = "frightful_hobgoblin"
version = "0.1.0"
authors = ["Vincent Junge <vincentjunge@posteo.net>"]
edition = "2021"
default-run = "run"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
# For profiling
debug = true

[dependencies]
copy_dir = "0.1"
anvil-region = "0.8"
named-binary-tag = "0.6"
num-traits = "0.2"
num-derive = "0.4"
rayon = "1"
itertools = "0.12"
bresenham = { path = "bresenham-rs" }
# Used only for debugging
image = { version = "0.25", default-features = false, features = ["png"] }
bevy_ecs = { version = "0.14", default-features = false}
bevy_math = "0.14"
bevy_derive = "0.14"
bevy_utils = "0.14"
bitflags = "2"
enum-iterator = "2"
# git points to pull request that fixes off-by-one error
nanorand = {version = "0.8", git = "https://github.com/StT191/nanorand-rs.git" }
flate2 = "1"
toml = "0.8"
serde = {version = "1", features = ["serde_derive"]}
zip = {version = "2", default-features = false}
walkdir = "2"
