[package]
name = "frightful_hobgoblin"
version = "0.1.0"
authors = ["Mira Morgana <mira-morgana@posteo.net>"]
edition = "2024"
default-run = "run"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
# For profiling
debug = true

[dependencies]
copy_dir = "0.1"
anvil-region = { path = "anvil-region" }
named-binary-tag = "0.6"
num-traits = "0.2"
num-derive = "0.4"
rayon = "1"
itertools = "0.12"
bresenham = { path = "bresenham-rs" }
# Used only for debugging
image = { version = "0.25", default-features = false, features = ["png"] }
bevy_ecs = { git="https://github.com/bevyengine/bevy.git", rev="12f605e", default-features = false}
bevy_math = { git="https://github.com/bevyengine/bevy.git", rev="12f605e"}
bevy_derive = { git="https://github.com/bevyengine/bevy.git", rev="12f605e"}
bevy_utils = { git="https://github.com/bevyengine/bevy.git", rev="12f605e"}
bevy_platform = { git="https://github.com/bevyengine/bevy.git", rev="12f605e"}
bitflags = "2"
enum-iterator = "2"
# fixes off-by-one error
nanorand = {version = "0.8", git = "https://github.com/Absolucy/nanorand-rs", branch="main" }
flate2 = "1"
toml = "0.8"
serde = {version = "1", features = ["serde_derive"]}
zip = {version = "2", default-features = false}
walkdir = "2"
